# der-duemmste-fliegt

./: .gitignore  Makefile  README.md  TODO.md  bun.lockb  create_admin.py  package-lock.json  package.json  postcss.config.mjs  pyproject.toml  seed_db.py  tailwind.config.js
src/der_duemmste/: __init__.py  __main__.py  auth.py  extensions.py  routes.py  socket_events.py  wsgi.py
src/der_duemmste/migrations/versions/: 26fcc5e5aebf_add_remaining_votes_column_to_user.py
src/der_duemmste/model/: question.py  user.py
src/der_duemmste/routes/: __init__.py  auth.py  questions.py  routes.py  user.py
src/der_duemmste/static/css/: style.css  tailwind.css
src/der_duemmste/templates/: base.html  index.html  login.html  player_overview.html  question_overview.html
src/der_duemmste/templates/partials/: access_denied.html  footer.html  header.html  pagination.html  question_edit.html  question_item.html  question_list.html  user_edit.html  user_item.html  user_list.html
